[tool.poetry]
name = "dockerds"
version = "0.1.0"
description = ""
authors = ["martin <martinmail@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.7.1"
ipython = "*"
pyarrow = "*"
ipykernel = "*"
torch = {url = "https://download.pytorch.org/whl/cu102/torch-1.10.0%2Bcu102-cp38-cp38-linux_x86_64.whl"}
wandb = "*"
pandas = "*"
numpy = "*"
scipy = "*"
scikit-learn = "*"
jupyterlab = "*"
seaborn = "*"
plotly = "*"
plotly-express = "*"
pyyaml = "*"
hydra-core = "^1.*"
tensorboard = "*"
optuna = "*"
statsmodels = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"