[tool.poetry]
name = "dockerds"
version = "0.0.1"
description = ""
authors = ["martin <martinmail@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.7.1"
ipython = "^7.0.1"
allenai_common = "^1.1.1"
pyarrow = "^1.0.1"
ipykernel = "^5.0.1"
torch = {url = "https://download.pytorch.org/whl/cu101/torch-1.6.0%2Bcu101-cp38-cp38-linux_x86_64.whl"}
pytorch-forecasting = "^0.5.2"
wandb = "^0.10.11"
pandas = "^1.1.0"
numpy = "*"
scipy = "*"
fbprophet = "^0.7.1"
scikit-learn = "*"
jupyterlab = "*"
seaborn = "*"
plotly = "*"
plotly-express = "*"
jsonlines = "^1.0.0"
pyyaml = "^5.0.1"
pytest = "^6.0.1"
tensorboard = "^2.1.0"
tensorflow = "^2.1.0"
optuna = "^2.1.0"
statsmodels = "^0.11.1"
# u8darts = "^0.4.0"
# torchvision = {url = "https://download.pytorch.org/whl/cu101/torchvision-0.7.0%2Bcu101-cp38-cp38-linux_x86_64.whl"}
torchtext = {url = "https://download.pytorch.org/whl/torchtext-0.7.0-cp38-cp38-linux_x86_64.whl"}
allennlp = "^1.1.0"
allennlp_models = "^1.1.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"